# Casualties-Unknown-DesktopPet

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: build.yml
data/: accessories.json
desktopPet/anim/: Anim.controller.json  Arms.controller.json
desktopPet/anim/clips/: ArmsAirDown.json  ArmsAirUp.json  ArmsClimbDown.json  ArmsClimbIdle.json  ArmsClimbUp.json  ArmsCrouch.json  ArmsCrouchMove.json  ArmsGunDown.json  ArmsGunDownBack.json  ArmsGunStraight.json  ArmsGunSuicide.json  ArmsGunUp.json  ArmsGunUpBack.json  ArmsIdle.json  (+30 more)
desktopPet/configs/: README.md  chatter.json
desktopPet/fonts/: README.md
desktopPet/foods/: README.md
desktopPet/interactions/: default.json
desktopPet/music/: README.md
desktopPet/poses/: stand.json
desktopPet/slotbg/: README.md
desktopPet/stickers/: README.md
desktopPet/wheel/: README.md
src/: accessory.rs  animClip.rs  animController.rs  animPlayer.rs  animator.rs  app.rs  asset.rs  behavior.rs  bodyAssembly.rs  bubble.rs  bus.rs  chatter.rs  cli.rs  contextMenu.rs  dropItem.rs  feedDrag.rs  food.rs  garble.rs  hitTest.rs  input.rs  interact.rs  inventory.rs  inventoryWindow.rs  item.rs  lib.rs  main.rs  mood.rs  music.rs  musicPlayerCfgWindow.rs  musicPlayerWindow.rs  needs.rs  needsBar.rs  paths.rs  physics.rs  plugin.rs  pose.rs  rewardWheel.rs  rpsGame.rs  settings.rs  settingsWindow.rs  (+7 more)
src/motion/: idle.rs  jump.rs  mod.rs  paw.rs  plank.rs  pushup.rs  run.rs  squat.rs  walk.rs
src/renderer/: mod.rs  sprite.wgsl  spritePipeline.rs
src/text/: mod.rs  render.rs  system.rs
(+2 files in other folders)
